# dnd_fight_counter

./: .gitignore  LICENCE  README.md  makefile  pyproject.toml
fight_counter/: FightCounter.py  __init__.py  __main__.py  app.py  common.py  dicts.py  difficulty_level_counter.py  enums.py  fight_counter.py  plot_maker.py  utils.py
fight_counter/data/: challenge_xp.csv  challenge_xp_full.csv  challenge_xp_raw copy.csv  challenge_xp_raw.csv  clash_data.json  pd_levels.csv
fight_counter/templates/: difficulty_level_counter.html
helpers/: fit_unknown_challenge_xp.ipynb
tests/: test_difficulty_level_counter.py  test_fight_counter.py  test_utils.py
