[tool.poetry]
name = "dnd-fight-counter"
version = "0.1.0"
description = ""
authors = ["chwilko <bartekchwilkowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = {extras = ["jupyter"], version = "^24.4.2"}
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
choose = "^2.0.0"
jupyter = "^1.0.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pytest = "^8.2.0"
scipy = "^1.13.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true